--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
   "content_scripts": [
     {
       "matches": ["http://*/*", "https://*/*"],
-      "exclude_matches" : ["https://github.com/azpat/NewSpeak", "http://github.com/azpat/NewSpeak"]
+      "exclude_matches" : ["https://github.com/azpat/NewSpeak", "http://github.com/azpat/NewSpeak"],
       "js": ["inject.js"],
       "run_at" : "document_idle",
       "all_frames" : false
